Primeira versão da funcionalidade de mesclar as tarefas.

--- a/View/uFrameTIcket.fmx
+++ b/View/uFrameTIcket.fmx
@@ -224,5 +224,9 @@
       Text = 'Calcular total esfor'#231'o'
       OnClick = mniCalcularTotalEsforcoClick
     end
+    object mniMescarTodasTarefas: TMenuItem
+      Text = 'Mesclar tarefas (Todas)'
+      OnClick = mniMescarTodasTarefasClick
+    end
   end
 end
